# fluent-voice

./: .gitignore  .gitmodules  .hakari.toml  CARGO_HAKARI.md  CARGO_UPDATE_SUMMARY.md  CLAUDE.md  Cargo.toml  ERROR_CATALOG.md  README.md  TODO.md  TODO_WARNINGS_ERRORS.md  TURD.md  build_check.sh  cyterm_errors.txt  cyterm_errors2.txt  fluent-voice.code-workspace  fluent_voice_errors2.txt  fluent_voice_errors3.txt  fluent_voice_errors4.txt  fluent_voice_errors5.txt  fluent_voice_errors_real.txt  justfile  test_empty_rms.rs
animator/: Cargo.toml
animator/src/: app.rs  cfg.rs  lib.rs  main.rs
animator/src/display/: oscillator.rs  spectroscope.rs
animator/src/examples/: amplitude_waveform_example.rs
animator/src/oscillator/: mod.rs  oscillator.rs  vector.rs
archive/kokoros/koko/: Cargo.toml
archive/kokoros/koko/src/: main.rs
archive/kokoros/kokoros/: Cargo.toml
archive/kokoros/kokoros/src/onn/: ort_base.rs  ort_koko.rs
archive/kokoros/kokoros/src/tts/: koko.rs  phonemizer.rs  vocab.rs
archive/openai/: Cargo.toml
archive/openai/src/: lib.rs
candle/koffee/: Cargo.toml  TODO.md  syrup.rpw
candle/koffee/examples/: cyrup_wake.rs  record_training_samples.rs  test_cyrup_models.rs  train_cyrup_stop.rs  train_syrup.rs
candle/koffee/src/: config.rs  constants.rs  lib.rs  main.rs  server.rs  service.rs  trainer.rs
candle/koffee/src/audio/: audio_types.rs  band_pass_filter.rs  encoder.rs  gain_normalizer_filter.rs
candle/koffee/src/builder/: service.rs
candle/koffee/src/kfc/: averager.rs  comparator.rs  extractor.rs  wav_file_extractor.rs
candle/koffee/src/wakewords/: mod.rs  wakeword_detector.rs  wakeword_file.rs  wakeword_model.rs  wakeword_ref.rs  wakeword_v2.rs
candle/koffee/src/wakewords/comp/: mod.rs  wakeword_comp.rs  wakeword_ref_build.rs
candle/koffee/src/wakewords/nn/: mod.rs  wakeword_model_train.rs  wakeword_nn.rs
candle/koffee/tests/: detector.rs  wakeword.rs
candle/whisper/: Cargo.toml
candle/whisper/src/: builder.rs  lib.rs  microphone.rs  pcm_decode.rs  stream.rs  transcript.rs  types.rs  whisper.rs
cyterm/: Cargo.toml  README.md  TODO.md  build.rs
cyterm/src/: colors.rs  features.rs  lib.rs  llm.rs  main.rs  pixmap.rs  predictive.rs  soft_backend.rs  ui.rs
cyterm/src/asr/: audio.rs  decoder.rs  model.rs  multlingual.rs
elevenlabs/: Cargo.toml  FLUENT_API_MAPPINGS.md  TODO.md
elevenlabs/examples/: stt.rs  tts.rs
elevenlabs/examples/pronunciation_dictionaries/src/: main.rs
elevenlabs/src/: engine.rs  error.rs  fluent_api.rs  fluent_voice_impl.rs  lib.rs  tts.rs  voice.rs
elevenlabs/src/conversation/messages/: client_messages.rs
elevenlabs/src/endpoints/: mod.rs
elevenlabs/src/endpoints/admin/: audio_native.rs  mod.rs  pronunciation.rs  voice.rs
elevenlabs/src/endpoints/convai/: agents.rs  knowledge_base.rs  workspace.rs
elevenlabs/src/endpoints/genai/: audio_isolation.rs  mod.rs  speech_to_text.rs  tts.rs
elevenlabs/src/utils/: mod.rs
fluent-voice/: Cargo.toml  README.md
fluent-voice-domain/: Cargo.toml
fluent-voice-domain/src/: fluent_voice.rs  lib.rs  mic_backend.rs  speaker.rs  speaker_builder.rs  speech_source.rs  transcript.rs  tts_conversation.rs  vocal_speed.rs  voice_discovery.rs  wake_word.rs  wake_word_koffee.rs
fluent-voice-domain/src/builders/: sound_effects_builder.rs  stt_builder.rs  voice_discovery_builder.rs
fluent-voice/examples/: api_documentation.rs  api_usage.rs  audio_device_test.rs  basic_usage.rs  canonical_providers_demo.rs  elevenlabs_api_showcase.rs  fluent_builder_example.rs  readme_corrected.rs  readme_issues.md  readme_syntax_test.rs  readme_validation_summary.md  run_southpark.rs  southpark_conversation.rs  southpark_real.rs  stt.rs  stt_production_demo.rs  stt_with_syrup_wake_word.rs  test_readme_complete.rs  test_readme_syntax.rs  tts.rs  wake_word_demo.rs
fluent-voice/src/: audio_chunk.rs  audio_device_manager.rs  audio_format.rs  audio_isolation.rs  fluent_voice.rs  language.rs  lib.rs  model_id.rs  pronunciation_dict.rs  sound_effects.rs  speaker.rs  speaker_boost.rs  speaker_builder.rs  speech_to_speech.rs  stability.rs  stt_conversation.rs  stt_engine.rs  style_exaggeration.rs  tts_conversation.rs  tts_settings.rs  voice_clone.rs  voice_discovery.rs  voice_labels.rs  wake_word.rs  wake_word_conversation.rs  wake_word_koffee.rs
fluent-voice/src/audio_io/: microphone.rs  mod.rs
fluent-voice/src/builders/: audio_isolation_builder.rs  mod.rs  sound_effects_builder.rs  speech_to_speech_builder.rs  stt_builder.rs  tts_builder.rs  voice_clone_builder.rs
fluent-voice/src/engines/: default_stt_engine.rs  elevenlabs.rs  mod.rs
fluent-voice/tests/: builder_implementations.rs  integration_tests.rs  readme_syntax_analysis.rs  readme_with_macros.rs
fluent_voice/: Cargo.toml
fluent_voice/src/: mic_backend.rs  pitch_range.rs  timestamps.rs  tts_engine.rs  voice_error.rs
fluent_voice_macros/: Cargo.toml
forks/ort/: Cargo.toml  rustfmt.toml
forks/ort/docs/: package.json  pnpm-lock.yaml
forks/ort/ort-sys/: Cargo.toml  build.rs
forks/ort/ort-sys/src/: lib.rs  stub.rs
forks/ort/ort-sys/src/internal/: dirs.rs
forks/ort/src/: util.rs
forks/ort/src/tensor/: ndarray.rs
forks/ort/src/value/: impl_map.rs
kokoros/koko/: Cargo.toml
kokoros/koko/src/: main.rs
kokoros/kokoros/: Cargo.toml
kokoros/kokoros/src/tts/: phonemizer.rs
livekit/: Cargo.toml
livekit/src/: lib.rs  livekit_client.rs  playback.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: macro_tests.rs
openai/: Cargo.toml
openai/src/: lib.rs
speakrs-animator/: Cargo.toml
speakrs-animator/src/: audio_visualizer.rs  lib.rs  tts.rs  video_renderer.rs
speakrs-animator/src/audioio/: cpal.rs
speakrs-animator/src/oscillator/: spectro.rs
speakrs-kokoros/: Cargo.toml
speakrs-video/: Cargo.toml  README.md
speakrs-video/src/: cli_args.rs  generic.rs  lib.rs  macos.rs  native_video.rs  video_source.rs
src/: engine.rs  (+21 more)
vad/: Cargo.toml
vad/src/: predict.rs  vad.rs
vad/src/iterator/: predict.rs
vad/tests/: integration_test.rs
video/: Cargo.toml
video/src/: main.rs
(+88 files in other folders)
