[package]
name = "fluent_voice_animator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
env_logger = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
image = { workspace = true }
livekit = { workspace = true, features = ["native-tls"] }
livekit-api = { workspace = true, features = ["default", "native-tls"] }
wgpu = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
rustfft = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
