[package]
name = "fluent_voice_animator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"
authors = ["David Maple <davidcmaple@gmail.com>"]

[dependencies]
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

env_logger = "0.11.8"
parking_lot = "0.12.4"
# serde = { version = "1.0.219", features = ["derive"] } # in workspace-hack
# serde_json = "1.0.140" # in workspace-hack
# tokio = { version = "1.45.1", features = ["full"] } # in workspace-hack
# futures = "0.3.31" # in workspace-hack
# image = "0.25.6" # in workspace-hack
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", features = ["native-tls"] }
# livekit-api = { version = "0.4.3", features = ["native-tls"] } # in workspace-hack
wgpu = "25.0.2"
# derive_more = { version = "2.0.1", features = ["full"] } # in workspace-hack
thiserror = "2.0.12"
# rustfft = { version = "6.3.0" } # in workspace-hack
# clap = { version = "4.5.40", features = ["derive"] } # in workspace-hack
cpal = "0.16.0"
ratatui = "0.30.0-alpha.4"
crossterm = "0.29.0"
display = "0.1.2"
