[package]
name         = "cyterm"
version      = "0.1.0"
edition      = "2024"
authors      = ["David Maple<david@cyrup.ai>"]
license      = "MIT OR Apache-2.0"
description  = "Software-rendered Ratatui terminal with Candle Whisper ASR, Silero VAD, and embedded wake-word spotting."
readme       = "README.md"
default-run  = "cyterm"

[dependencies]
koffee = { path = "../candle/koffee"}
fluent_voice_whisper = { path = "../candle/whisper"}

ratatui             = { workspace = true }
cosmic-text         = { workspace = true }

cpal                = { workspace = true }
rubato              = { workspace = true }

ndarray             = { workspace = true }
typed-builder       = { workspace = true }
thiserror           = { workspace = true }

candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
candle-datasets     = { workspace = true, optional = true }

hf-hub              = { workspace = true }
tokenizers          = { workspace = true }
rand                = { workspace = true }

anyhow              = { workspace = true }
clap                = { workspace = true }

futures             = { workspace = true }
ort                 = { workspace = true }
pin-project         = { workspace = true }

byteorder           = { workspace = true }
bytemuck            = { workspace = true }

crossbeam-channel   = { workspace = true }
crossbeam-utils     = { workspace = true }

log                 = { workspace = true }

[dev-dependencies]
hound               = { workspace = true }
itertools           = { workspace = true }
tokio               = { workspace = true }
tokio-stream        = { workspace = true }

tracing             = { workspace = true }
tracing-chrome      = { workspace = true }
tracing-subscriber  = { workspace = true }
