[package]
name         = "cyterm"
version      = "0.1.0"
edition      = "2024"
authors      = ["David Maple<david@cyrup.ai>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/davidmaple/fluent-voice"
description  = "Software-rendered Ratatui terminal with Candle Whisper ASR, Silero VAD, and embedded wake-word spotting."
readme       = "README.md"
default-run  = "cyterm"

[dependencies]
fluent-voice-workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

koffee = { path = "../candle/koffee"}
fluent_voice_whisper = { path = "../candle/whisper"}

ratatui             = "0.30.0-alpha.4"
cosmic-text         = "0.14.2"

cpal                = "0.16.0"
# rubato              = { version = "0.16", features = ["fft_resampler"] } # in workspace-hack

# ndarray             = "0.16" # in workspace-hack
typed-builder       = "0.21"
thiserror           = "2.0.12"

candle-core         = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-nn           = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-datasets     = { git = "https://github.com/huggingface/candle", branch = "main", optional = true, default-features = false }

hf-hub              = "0.4.2"
# tokenizers          = "0.21.1" # in workspace-hack
# rand                = "0.9.1" # in workspace-hack

anyhow              = "1.0.98"
# clap                = { version = "4.5.40", features = ["derive"] } # in workspace-hack

futures             = "0.3.31"
# ort                 = "2.0.0-rc.10" # in workspace-hack
pin-project         = "1.1"

byteorder           = "1.5.0"
# bytemuck            = "1.23.1" # in workspace-hack

crossbeam-channel   = "0.5.15"
crossbeam-utils     = "0.8.21"

# log                 = "0.4.27" # in workspace-hack

[dev-dependencies]
hound               = "3.5.1"
# itertools           = "0.14" # in workspace-hack
# tokio               = { version = "1.45.1", features = ["rt", "sync", "macros"] } # in workspace-hack
tokio-stream        = "0.1"

# tracing             = "0.1.41" # in workspace-hack
tracing-chrome      = "0.7.2"
tracing-subscriber  = "0.3.19"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
