[package]
name = "fluent_voice_elevenlabs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"

[dependencies]
# workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

async-stream = "0.3.6"
base64 = "0.22"
bytes = "1.0"
futures-util = "0.3"
futures-channel = "0.3"
tokio = { version = "1.0", features = ["rt", "sync", "macros", "rt-multi-thread", "signal", "time", "fs"], default-features = false }
tokio-tungstenite = "0.26"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.20.1"
http = "1.3.1"
reqwest = { version = "0.12", features = ["http3", "rustls-tls-manual-roots", "multipart", "json", "stream"] }
webpki-roots = "1.0.1"
rustls = "0.23"
cpal.workspace = true
hound.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
tempfile = "3.8"
fluent_voice = { version = "0.1.0", path = "../fluent-voice" }
koffee = { version = "0.1.0", path = "../candle/koffee" }
futures = "0.3.31"


[lib]
name = "fluent_voice_elevenlabs"
path = "src/lib.rs"

[build-dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0.104"
tokio = { version = "1.0", features = ["full"] }
