[package]
name        = "fluent_voice"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/fluent-voice"
description = "Pure-trait fluent builder API for TTS & STT engines."

[features]
default       = []
tokio-runtime = []
wasm-runtime  = []
std_async     = []

[dependencies]
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
fluent_voice_domain = { version = "0.1.0", path = "../fluent-voice-domain" }
fluent_voice_vad = { version = "0.1.0", path = "../vad", features = ["async", "load-dynamic", "ort"] }
thiserror = "2.0"
futures-core = "0.3"
futures = "0.3"
clap = "4.5"
env_logger = "0.11"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
futures-util = "0.3"
derive_more = { version = "2.0", features = ["full"] }
koffee = { version = "0.1.0", path = "../candle/koffee" }
cpal = { workspace = true }
fluent_voice_whisper = { version = "0.1.0", path = "../candle/whisper", features = ["async-stream", "audio", "display", "record"] }

[dev-dependencies]
# tokio is in workspace-hack
# futures-util is in workspace-hack
