[package]
name        = "fluent_voice"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/fluent-voice"
description = "Pure-trait fluent builder API for TTS & STT engines."

[features]
default       = []
tokio-runtime = []
wasm-runtime  = []
std_async     = []

[dependencies]
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
fluent_voice_domain = { version = "0.1.0", path = "../fluent-voice-domain" }
fluent_voice_vad = { version = "0.1.0", path = "../vad", features = ["async", "load-dynamic", "ort"] }
thiserror = "2.0.12"
futures-core = "0.3.31"
futures = "0.3.31"
clap = "4.5.41"
env_logger = "0.11.8"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt", "sync", "macros"] }
futures-util = "0.3.31"
derive_more = { version = "2.0.1", features = ["full"] }
koffee = { version = "0.1.0", path = "../candle/koffee" }
fluent_voice_whisper = { version = "0.1.0", path = "../candle/whisper", features = ["async-stream", "audio", "display", "record"] }
async-stream = "0.3.6"
crossbeam = "0.8"
symphonia = { version = "0.5.4" }
hound = "3.4.0"
cpal = "0.16.0"
rubato = "0.16.2"
rand = "0.9.1"
anyhow = "1.0.68"
candle-core    = "0.9.1"
candle-nn      = "0.9.1"
candle-transformers = "0.9.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
candle-examples = "0.9.1"
byteorder = "1.5.0"

[dev-dependencies]
# tokio is in workspace-hack
# futures-util is in workspace-hack
