[package]
name        = "fluent_voice"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/fluent-voice"
description = "Pure-trait fluent builder API for TTS & STT engines."

[features]
default       = []
tokio-runtime = []
wasm-runtime  = []
std_async     = []
simd          = []

# ML acceleration features - passed through to candle crates
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:cudarc", "dep:half", "dep:bindgen_cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
flash-attn = ["cuda", "dep:candle-flash-attn", "candle-transformers/flash-attn"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
onnx = ["dep:candle-onnx"]

# Audio processing features
microphone = ["dep:cpal", "dep:rubato"]
encodec = ["dep:cpal", "dep:symphonia", "dep:rubato"]
mimi = ["dep:cpal", "dep:symphonia", "dep:rubato"]
snac = ["dep:cpal", "dep:symphonia", "dep:rubato"]
depth_anything_v2 = ["dep:palette", "dep:enterpolation"]

[dependencies]
fluent-voice-workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
fluent_voice_domain = { version = "0.1.0", path = "../fluent-voice-domain" }
fluent_voice_whisper = { version = "0.1.0", path = "../candle/whisper", features = ["async-stream", "audio", "display", "record"] }
fluent_voice_vad = { version = "0.1.0", path = "../vad", features = ["async", "load-dynamic", "ort"] }
koffee = { version = "0.1.0", path = "../candle/koffee" }
dia = { version = "0.1.0", path = "../dia-voice" }
cyrup_sugars = { path = "../../sugars/packages/cyrup-sugars", default-features = false, features = ["tokio-async"] }
thiserror = "2.0.12"
futures-core = "0.3.31"
futures = "0.3.31"
clap = "4.5.41"
env_logger = "0.11.8"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt", "sync", "macros"] }
futures-util = "0.3.31"
derive_more = { version = "2.0.1", features = ["full"] }
async-stream = "0.3.6"
crossbeam = "0.8"
symphonia = { version = "0.5.4", optional = true }
hound = "3.4.0"
cpal = { version = "0.16.0", optional = true }
rubato = { version = "0.16.2", optional = true }
rand = "0.9.1"
rand_distr = "0.5.1"
anyhow = "1.0.68"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1.5.0"
hf-hub = "0.4.3"
tokenizers = "0.21.2"
flate2 = "1.1.2"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
ringbuf = "0.4.8"
ndarray = "0.16.1"
memmap2 = "0.9.5"

# Optional acceleration dependencies
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", optional = true }
cudarc = { version = "0.12", optional = true }
half = { version = "2.4", optional = true }

# Optional ML/data dependencies
image = { version = "0.24", optional = true }
num-traits = { version = "0.2", optional = true }
palette = { version = "0.7.6", optional = true }
enterpolation = { version = "0.2.1", optional = true }
pyo3 = { version = "0.22.0", features = ["auto-initialize", "abi3-py311"], optional = true }
pdf2image = { version = "0.1.2", optional = true }
safetensors = { version = "0.4", optional = true }
csv = { version = "1.3.0", optional = true }

candle-core = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-flash-attn = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false, optional = true }
candle-onnx = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false, optional = true }
candle-datasets = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false, optional = true }

[dev-dependencies]
# tokio is in workspace-hack
# futures-util is in workspace-hack
imageproc = "0.23"
ab_glyph = "0.2"
tracing = "0.1"
tracing-chrome = "0.7"

[build-dependencies]
anyhow = "1.0"
bindgen_cuda = { version = "0.1.1", optional = true }
