[package]
name        = "fluent_voice"
version     = "1.0.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Pure-trait fluent builder API for TTS & STT engines."

[features]
default       = []
tokio-runtime = []
wasm-runtime  = []
std_async     = []

[dependencies]
thiserror     = "2"
futures-core  = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
fluent_voice_macros = { path = "../macros" }
