[package]
name = "fluent_voice_livekit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
rust = { unsafe_code = "warn" }

[lib]
path = "src/lib.rs"
doctest = false

[[example]]
name = "test_app"

[features]
test-support = []

[dependencies]
tracing = "0.1.41"
anyhow = "1.0.98"
cpal = "0.16.0"
futures = "0.3.31"
http_client_tls = { git = "https://github.com/zed-industries/zed", branch = "main" }
image = "0.25.6"
livekit-api = "0.4.3"
log = "0.4.27"
nanoid = "0.4.0"
parking_lot = "0.12.4"
postage = "0.5.0"
tokio = "1.45.1"
tokio-tungstenite = "0.26.2"
wgpu = "25.0.2"
raw-window-handle = "0.6.2"

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc = { rev = "80bb8f4c9112789f7c24cc98d8423010977806a6", git = "https://github.com/zed-industries/livekit-rust-sdks" }
livekit = { rev = "80bb8f4c9112789f7c24cc98d8423010977806a6", git = "https://github.com/zed-industries/livekit-rust-sdks", features = [
    "__rustls-tls"
] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap = "0.0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-video = "0.4.3"
coreaudio-rs = "0.13.0"
objc = "0.2.7"

[dev-dependencies]
sha2 = "0.10.9"
simplelog = "0.12.2"

[build-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

[package.metadata.cargo-machete]
ignored = ["serde_json"]
