[package]
name = "fluent_voice_livekit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
rust = { unsafe_code = "warn" }

[lib]
path = "src/lib.rs"
doctest = false

[[example]]
name = "test_app"

[features]
test-support = []

[dependencies]
tracing.workspace = true
anyhow.workspace = true
cpal.workspace = true
futures.workspace = true
rustls-platform-verifier.workspace = true
image.workspace = true
livekit-api.workspace = true
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
postage.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc.workspace = true
livekit.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-video.workspace = true
coreaudio-rs.workspace = true
objc2.workspace = true

[dev-dependencies]
sha2.workspace = true
simplelog.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json"]
