[package]
name        = "fluent_voice_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords    = ["tts", "stt", "voice", "speech", "macros"]
categories  = ["multimedia::audio", "api-bindings"]

[dependencies]
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
