[package]
name        = "fluent_voice_macros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"
keywords    = ["tts", "stt", "voice", "speech", "macros"]
categories  = ["multimedia::audio", "api-bindings"]

[dependencies]
fluent_voice_domain = { version = "0.1.0", path = "../fluent-voice-domain" }
fluent-voice-workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
