[package]
name = "fluent_voice_openai"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"

[dependencies]
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

axum = "0.8.4"
# serde = { version = "1.0.219", features = ["derive"] } # in workspace-hack
tower-http = "0.6.6"
