[workspace]



[package]
name = "speakers_animator"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { "0.1.0" }
parking_lot = { "0.1.0" }
serde = { "0.1.0", features = ["derive"] }
serde_json = { "0.1.0" }
tokio = { "0.1.0", features = ["full"] }
futures = { "0.1.0" }
image = { "0.1.0" }
livekit = { "0.1.0", features = ["native-tls"] }
livekit-api = { "0.1.0", features = ["default", "native-tls"] }
wgpu = { "0.1.0" }
derive_more = { "0.1.0" }
thiserror = { "0.1.0" }
rustfft = { "0.1.0" }
clap = { "0.1.0" }
cpal = { "0.1.0" }
ratatui = { "0.1.0" }
crossterm = { "0.1.0" }
