[workspace]



[package]
name = "speakrs_kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs."0.1.0"
hound."0.1.0"
indicatif."0.1.0"
lazy_static."0.1.0"
mp3lame-encoder."0.1.0"
ndarray."0.1.0"
ndarray-npy."0.1.0"

# Base ONNX Runtime configuration
ort = { "0.1.0" }
regex."0.1.0"
reqwest."0.1.0"
serde_json."0.1.0"
tokio."0.1.0"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]

[lib]
name = "speakrs_kokoros"
path = "src/lib.rs"
