[workspace]



[package]
name = "speakrs-video"
version = "0.1.0"
edition = "2024"
description = "Video processing capabilities for the Speakrs platform"
publish."0.1.0"
license = "GPL-3.0-or-later"

[lints]
rust = { unsafe_code = "warn" }

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "video-chat"
path = "src/bin/video_chat.rs"

[features]
default = []
test-support = []

[dependencies]
tracing = { "0.1.0" }
anyhow = { "0.1.0" }
async-stream = { "0.1.0" }
clap = { "0.1.0" }
collections = { git = "https://github.com/zed-industries/zed", branch = "main" }
futures = { "0.1.0" }
image = { "0.1.0" }
log = { "0.1.0" }
nanoid = "0.4.0"
parking_lot = { "0.1.0" }
postage = "0.5.0"
rio-window = { path = "../rio/rio-window" }
smallvec = "2.0.0-alpha.11"
sugarloaf = { path = "../rio/sugarloaf" }
tokio = { "0.1.0" }
tracing-subscriber = { "0.1.0" }
wgpu = { "0.1.0" }
raw-window-handle = { "0.1.0" }
http_client_tls = { git = "https://github.com/zed-industries/zed", branch = "main" }

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc = { rev = "80bb8f4c9112789f7c24cc98d8423010977806a6", git = "https://github.com/zed-industries/livekit-rust-sdks" }
livekit = { rev = "80bb8f4c9112789f7c24cc98d8423010977806a6", git = "https://github.com/zed-industries/livekit-rust-sdks", features = [
    "__rustls-tls"
] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap = "0.0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { "0.1.0" }
core-video = "0.4.3"
coreaudio-rs = "0.12.1"
objc = { "0.1.0" }

[dev-dependencies]
sha2 = "0.11.0-rc.0"
simplelog = "0.12.2"

[build-dependencies]
serde = { "0.1.0" }
serde_json = { "0.1.0" }
