[package]
name = "fluent_voice_vad"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/cyrup-ai/speakrs"
readme = "README.md"
keywords = ["speech", "stt","recognition", "voice", "activity", "detection"]
categories = ["multimedia::audio"]

[dependencies]
futures = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true, features = ["ndarray"] }
pin-project = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
hound = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

[features]
async = []
load-dynamic = ["ort/load-dynamic"]

[lib]
path = "src/lib.rs"
name = "speakrs_turndetector"
