[package]
name = "fluent_voice_vad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["speech", "stt","recognition", "voice", "activity", "detection"]
categories = ["multimedia::audio"]

[dependencies]
futures.workspace = true
ndarray.workspace = true
ort.workspace = true
pin-project.workspace = true
thiserror.workspace = true
typed-builder.workspace = true

[dev-dependencies]
hound.workspace = true
itertools.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[features]
async = []
load-dynamic = ["ort/load-dynamic"]

[lib]
path = "src/lib.rs"
name = "fluent_voice_vad"
