[package]
name = "fluent_voice_video"
version.workspace = true
edition.workspace = true
description = "Video processing capabilities for the Speakrs platform"

[lints]
rust.unsafe_code = "warn"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "video-chat"
path = "src/bin/video_chat.rs"

[features]
default = []
test-support = []

[dependencies]
tracing.workspace = true
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
collections = { workspace = true }
futures.workspace = true
image.workspace = true
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
postage.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
http_client_tls = { workspace = true }

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc = { workspace = true }
livekit = { workspace = true, features = ["__rustls-tls"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-video.workspace = true
coreaudio-rs.workspace = true
objc.workspace = true

[dev-dependencies]
sha2.workspace = true
simplelog.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
