[package]
name = "fluent_video"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video streaming"

[lints]
rust.unsafe_code = "warn"

[lib]
path = "src/lib.rs"
name = "fluent_video"

[[bin]]
name = "video-chat"
path = "src/bin/video_chat.rs"

[features]
default = []
test-support = []

[dependencies]
tracing.workspace = true
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
futures.workspace = true
image.workspace = true
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
postage.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
http_client_tls = { workspace = true }
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc = { workspace = true }
livekit = { workspace = true, features = ["__rustls-tls"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-video.workspace = true
coreaudio-rs.workspace = true
objc2.workspace = true

[dev-dependencies]
sha2.workspace = true
simplelog.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
