[package]
name = "fluent_video"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"
description = "Video streaming"

[lints]
rust.unsafe_code = "warn"

[lib]
path = "src/lib.rs"
name = "fluent_video"

[[bin]]
name = "video-chat"
path = "src/bin/video_chat.rs"

[features]
default = []
test-support = []

[dependencies]
fluent-voice-workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

# tracing = "0.1.41" # in workspace-hack
anyhow = "1.0.98"
async-stream = "0.3.6"
# clap = { version = "4.5.40", features = ["derive"] } # in workspace-hack
futures = "0.3.31"
# image = "0.25.6" # in workspace-hack
# log = "0.4.27" # in workspace-hack
nanoid = "0.4.0"
parking_lot = "0.12.4"
postage = "0.5.0"
# smallvec = "2.0.0-alpha.10" # in workspace-hack
# tokio = { version = "1.45.1", features = ["rt", "sync", "macros"] } # in workspace-hack
tracing-subscriber = "0.3.19"
wgpu = "25.0.2"
raw-window-handle = "0.6.2"
thiserror = "2.0.12"
url = "2.5.4"
sugarloaf = "0.2.20"
tokio = "1.46.1"

[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
libwebrtc = { git = "https://github.com/zed-industries/livekit-rust-sdks" }
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", features = ["__rustls-tls"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
scap = "0.0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-video = "0.4.3"
coreaudio-rs = "0.13.0"
objc2 = "0.6.1"

[dev-dependencies]
sha2 = "0.10.9"
simplelog = "0.12.2"

[build-dependencies]
# serde = { version = "1.0.219", features = ["derive"] } # in workspace-hack
# serde_json = "1.0.140" # in workspace-hack
