# ---------------------------------------------
#  koffee-candle workspace / library manifest
#  — targets desktop (native) by default —
#      ▸ production-ready build: `cargo build`
#      ▸ development build:      `cargo build --features dev`
#      ▸ WASM (browser):         `cargo build --target wasm32-unknown-unknown --features web`
# ---------------------------------------------

[package]
name         = "koffee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description  = "Cross-platform wake-word detector: Candle ⚡ KFC front-end"
authors      = ["David Maple <david@cyrup.ai>"]

# ------------------------------------------------
#  Dependencies
# ------------------------------------------------
[dependencies]
workspace-hack = { version = "0.1.0", path = "../../workspace-hack" }

# — DSP / NN —
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }

# — audio / resampling —
# rubato is in workspace-hack
# rustfft is in workspace-hack
hound = "3.5"

# — containers / utils —
arrayvec = "0.7"
# smallvec is in workspace-hack
indexmap = "2.6"
thiserror = "2.0"
# log is in workspace-hack

# — serde / misc —
# serde is in workspace-hack
# serde_json is in workspace-hack
ciborium = "0.2"
# strum is in workspace-hack

# — optional parallelism (desktop only) —
rayon = { version = "1.10", optional = true }

# — browser bindings (wasm32 build only) —
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["MediaDevices","MediaStream","AudioContext","console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
anyhow = "1.0"
# tokio is in workspace-hack
# clap is in workspace-hack

# ------------------------------------------------
#  Feature flags
# ------------------------------------------------
[features]
# ───────────── default: desktop, release-ready ─────────────
default = ["desktop"]

# --- Core build flavours -----------------------------------
desktop = ["rayon"]          # native build – includes SIMD & Rayon
web     = ["wasm-bindgen",
           "js-sys",
           "web-sys/Window",
           "console_error_panic_hook"] # wasm32-unknown-unknown target

# --- Developer conveniences (opt-in) -----------------------
dev = ["debug", "desktop"]   # ← enable with `--features dev`
debug = []                   # extra logging / assertions

# --- Optional extended functionality -----------------------
record = []                  # WAV recording of detection windows
display = []                 # SVG / terminal visualisations
audio   = []                 # gate any OS-specific audio I/O that may be added

# Ensure mutually-exclusive defaults:
# (cargo resolves additive sets – desktop or web must be explicit)
